made accessibility corrections and added background color for contrast if bg img fails

--- a/main.css
+++ b/main.css
@@ -5,10 +5,12 @@
 body {
   font-family: 'Montserrat', sans-serif;
   margin: 0;
+  background-color: rgb(75, 75, 75);
   background-image: url(https://images.unsplash.com/photo-1532240916534-3193d70b73f5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2468&q=80);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  
 }
 
 nav {
